[build-system]
requires = [
  "setuptools",
  "wheel",
]

[tool.ruff]
target-version = "py39"
line-length = 120
# [tool.ruff.pycodestyle]
# ignore-overlong-task-comments = true
format.preview = true
lint.select = [
  "D",  # see: https://pypi.org/project/pydocstyle
  "E",
  "F",  # see: https://pypi.org/project/pyflakes
  "I",  # see: https://pypi.org/project/isort/
  "N",  # see: https://pypi.org/project/pep8-naming
  "S",  # see: https://pypi.org/project/flake8-bandit
  "UP", # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "W",  # see: https://pypi.org/project/pycodestyle
]
lint.extend-select = [
  "A",    # see: https://pypi.org/project/flake8-builtins
  "ANN",  # see: https://pypi.org/project/flake8-annotations
  "B",    # see: https://pypi.org/project/flake8-bugbear
  "C4",   # see: https://pypi.org/project/flake8-comprehensions
  "EXE",  # see: https://pypi.org/project/flake8-executable
  "ISC",  # see: https://pypi.org/project/flake8-implicit-str-concat
  "PERF", # see: https://pypi.org/project/perflint/
  "PIE",  # see: https://pypi.org/project/flake8-pie
  "PLE",  # see: https://pypi.org/project/pylint/
  "PT",   # see: https://pypi.org/project/flake8-pytest-style
  "PYI",  # see: https://pypi.org/project/flake8-pyi/
  "Q",    # see: https://pypi.org/project/flake8-quotes
  "RET",  # see: https://pypi.org/project/flake8-return
  "RUF",  # Ruff-specific rules
  "SIM",  # see: https://pypi.org/project/flake8-simplify
  "T10",  # see: https://pypi.org/project/flake8-debugger
  "TID",  # see: https://pypi.org/project/flake8-tidy-imports/
  "YTT",  # see: https://pypi.org/project/flake8-2020
]
lint.ignore = [
  "D100",   # todo: Missing docstring in public module
  "D104",   # todo: Missing docstring in public package
  "D107",   # Missing docstring in `__init__`
  "E731",   # Do not assign a lambda expression, use a def
  "EXE002", # The file is executable but no shebang is present
  "ISC001", # potehtional comflict, flagged by Ruff itsel
]
lint.per-file-ignores."docs/source/conf.py" = [
  "A001",
  "D103",
]
lint.per-file-ignores."examples/*" = [
  "ANN",  # any annotaions
  "D205", # 1 blank line required between summary line and description
  "D212", # [*] Multi-line docstring summary should start at the first line
  "D415", # First line should end with a period, question mark, or exclamation point
  "E501", # Line too long (XXX > 120)
]
lint.per-file-ignores."setup.py" = [
  "ANN202",
  "ANN401",
]
lint.per-file-ignores."src/**" = [
  "ANN401",
  "S310",   # todo: Audit URL open for permitted schemes. Allowing use of `file:` or custom schemes is often unexpected.
  "UP006",  # todo: Use `list` instead of `List` for type annotation
  "UP035",  # todo: `typing.List` is deprecated, use `list` instead
]
lint.per-file-ignores."tests/**" = [
  "ANN001",
  "ANN201",
  "ANN202",
  "ANN401",
  "PT028",  # Test function parameter has default argument
  "S101",
  "S301",   # todo: `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
]
# Unlike Flake8, default to a complexity level of 10.
lint.mccabe.max-complexity = 10
# Use Google-style docstrings.
lint.pydocstyle.convention = "google"

[tool.codespell]
# skip = '*.py'
quiet-level = 3
# Todo: comma separated list of words; waiting for:
#  https://github.com/codespell-project/codespell/issues/2839#issuecomment-1731601603
# Todo: also adding links until they ignored by its: nature
#  https://github.com/codespell-project/codespell/issues/2243#issuecomment-1732019960
ignore-words-list = """
  rouge, \
  mape, \
  wil, \
  fpr, \
  raison, \
  archiv, \
  lins
"""

[tool.docformatter]
recursive = true
# some docstring start with r"""
wrap-summaries = 119
wrap-descriptions = 120
blank = true

[tool.check-manifest]
ignore = [
  "*.yml",
  ".github",
  ".github/*",
]

[tool.typos]
default.extend-ignore-identifiers-re = [
  # *sigh* this just isn't worth the cost of fixing
  "AttributeID.*Supress.*",
  "Levenhstein",
]
# *sigh* this just isn't worth the cost of fixing
default.extend-identifiers.MAPE = "MAPE"
default.extend-identifiers.WIL = "WIL"
default.extend-identifiers.Raison = "Raison"
# Don't correct the surname "Teh"
default.extend-words.fpr = "fpr"
default.extend-words.mape = "mape"
default.extend-words.wil = "wil"

[tool.mypy]
files = [
  "src/torchmetrics",
]
install_types = "True"
non_interactive = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
# disable this rule as the Trainer attributes are defined in the connectors, not in its __init__
disable_error_code = "attr-defined"
# style choices
warn_no_return = "False"

[tool.pytest]
ini_options.norecursedirs = [
  ".git",
  ".github",
  "dist",
  "build",
  "docs",
]
ini_options.addopts = [
  "--strict-markers",
  "--doctest-modules",
  "--doctest-plus",
  "--color=yes",
  "--disable-pytest-warnings",
]
ini_options.markers = [
  "DDP: mark a test as Distributed Data Parallel",
]
ini_options.filterwarnings = [
  "ignore::FutureWarning",
  "default:::torchmetrics",
]
ini_options.xfail_strict = true
ini_options.junit_duration_report = "call"

[tool.coverage]
run.concurrency = "thread"
run.parallel = true
run.relative_files = true
report.exclude_lines = [
  "pass",
  "pragma: no cover",
]
