[tool:pytest]
norecursedirs =
    .git
    .github
    dist
    build
addopts =
    --strict
    --doctest-modules
    --color=yes

[coverage:run]
parallel = True
concurrency = thread
relative_files = True

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass


[flake8]
max-line-length = 120
exclude =
    *.egg
    build
    temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    E731  # Do not assign a lambda expression, use a def


# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*


[metadata]
license_file = LICENSE
description-file = README.md
# long_description = file:README.md
# long_description_content_type = text/markdown


[yapf]
based_on_style = pep8
spaces_before_comment = 2
split_before_logical_operator = true
split_before_arithmetic_operator = true
COLUMN_LIMIT = 120
COALESCE_BRACKETS = true
DEDENT_CLOSING_BRACKETS = true
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = false
DISABLE_ENDING_COMMA_HEURISTIC = false


[mypy]
# Typing tests is low priority, but enabling type checking on the
# untyped test functions (using `--check-untyped-defs`) is still
# high-value because it helps test the typing.
files = torchmetrics
disallow_untyped_defs = True
ignore_missing_imports = True

# todo: add proper typing to this module...
[mypy-torchmetrics.metric]
ignore_errors = True

# todo: add proper typing to this module...
[mypy-torchmetrics.collections]
ignore_errors = True

# todo: add proper typing to this module...
[mypy-torchmetrics.compositional]
ignore_errors = True

# todo: add proper typing to this module...
[mypy-torchmetrics.utilities.*]
ignore_errors = True

# todo: add proper typing to this module...
[mypy-torchmetrics.classification.*]
ignore_errors = True

# todo: add proper typing to this module...
[mypy-torchmetrics.functional.*]
ignore_errors = True

# todo: add proper typing to this module...
[mypy-torchmetrics.regression.*]
ignore_errors = True

# todo: add proper typing to this module...
[mypy-torchmetrics.retrieval.*]
ignore_errors = True
