[tool:pytest]
norecursedirs =
    .git
    .github
    dist
    build
doctest_plus = enabled
addopts =
    --strict
    --color=yes
doctest_optionflags =
    NORMALIZE_WHITESPACE
    ELLIPSIS
    # FLOAT_CMP
timeout = 120

[coverage:run]
parallel = True
concurrency = thread
relative_files = True

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass


[flake8]
max-line-length = 120
exclude =
    *.egg
    build
    temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    E731  # Do not assign a lambda expression, use a def
    E203  # whitespace before ':'


# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*


[metadata]
license_file = LICENSE
description-file = README.md
# long_description = file:README.md
# long_description_content_type = text/markdown


[mypy]
# Typing tests is low priority, but enabling type checking on the
# untyped test functions (using `--check-untyped-defs`) is still
# high-value because it helps test the typing.
files = torchmetrics
disallow_untyped_defs = True
ignore_missing_imports = True
